--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.177",
     "@types/p5": "^1.3.1",
+    "@types/ramda": "^0.27.60",
     "typescript": "^4.4.3",
     "vite": "^2.5.7",
     "vite-plugin-solid": "^2.0.3"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "p5": "^1.4.0",
+    "ramda": "^0.27.1",
     "solid-js": "^1.1.3"
   }
 }
