--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/lodash": "^4.14.177",
     "@types/p5": "^1.3.1",
     "@types/ramda": "^0.27.60",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.4.3",
     "vite": "^2.5.7",
     "vite-plugin-solid": "^2.0.3"
@@ -21,6 +24,7 @@
     "lodash": "^4.17.21",
     "p5": "^1.4.0",
     "ramda": "^0.27.1",
+    "solid-app-router": "^0.1.14",
     "solid-js": "^1.1.3"
   }
 }
