--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite-plugin-solid": "^2.0.3"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^3.12.0",
     "lodash": "^4.17.21",
     "ml5": "^0.7.1",
     "p5": "^1.4.0",
